implemented domain creation, oia unpacking